--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-android-voice": "^0.5.1",
     "react-native-circular-progress": "0.0.8",
     "react-native-drawer": "^2.3.0",
+    "react-native-fetch-blob": "^0.10.5",
     "react-native-image-picker": "^0.26.3",
     "react-native-image-zoom-viewer": "^2.0.5",
     "react-native-maps": "^0.15.2",
